# SmarCar

./: CMakeLists.txt  README.md  SmartCar.pro  client.cpp  client.h  com_control.cpp  com_control.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  opencv_data.cpp  opencv_data.h  widget.cpp  widget.h  widget.ui
